--- a/templates/charts/index.html
+++ b/templates/charts/index.html
@@ -11,6 +11,7 @@
 <div class='row'>
     <div class='col-sm-12'>
         <h1>Hello World</h1>
+        <canvas id="myChart" width="400" height="400"></canvas>
     </div>
 </div>
 
