--- a/templates/charts/index.html
+++ b/templates/charts/index.html
@@ -8,11 +8,11 @@
 
 {% block content %}
 
-<div class='row'>
-    <div class='col-sm-12'>
-        <h1>Hello World</h1>
-        <canvas id="myChart" width="400" height="400"></canvas>
-    </div>
+<div class="row mt-3">
+  <h1>Internet speedtest</h1> <button type="button" class="btn btn-success ml-5 run-button">Run</button>
+  <div class='col-sm-12'>
+    <canvas id="myChart" class="mt-2" width="400" height="400"></canvas>
+  </div>
 </div>
 
 {% endblock content %}
