--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% include 'base/css.html' %}
 
-  <title>Django + Charts.js</title>
+  <title>Speedtest</title>
 
 </head>
 
