--- a/templates/charts/index.html
+++ b/templates/charts/index.html
@@ -9,7 +9,19 @@
 {% block content %}
 
 <div class="row mt-3">
-  <h1>Internet speedtest</h1> <button type="button" class="btn btn-success ml-5 run-button">Run</button>
+  <h1>Internet speedtest</h1> 
+  <form>
+    <div class="form-row">
+      <div class="col">
+        <input type="username" id="username" name="username" class="form-control ml-5" placeholder="Enter username" required>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-success ml-5 run-button">Run</button>
+      </div>
+    </div>
+  </form>
+  
+  
   <div class='col-sm-12'>
     <canvas id="myChart" class="mt-2" width="400" height="400"></canvas>
   </div>
